// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModeratorSettings _renderAutocompleteItem 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  onPress={[Function]}
>
  <Avatar
    avatarUrl="someurl"
  />
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    John Others
  </Text>
</TouchableOpacity>
`;

exports[`ModeratorSettings has navigation options 1`] = `
Object {
  "headerBackTitle": null,
  "headerLeft": <HeaderBackButton
    buttonImage={
      Object {
        "testUri": "../../react-navigation/src/views/assets/back-icon.png",
      }
    }
    onPress={[Function]}
    pressColorAndroid="rgba(0, 0, 0, .32)"
    tintColor="#808c9b"
    truncatedTitle="Back"
  />,
  "headerStyle": Object {
    "backgroundColor": "white",
    "paddingHorizontal": 10,
  },
  "headerTintColor": "#808c9b",
  "headerTitle": "Community Moderators",
  "headerTitleStyle": Object {
    "color": "black",
    "fontFamily": "Circular-Bold",
    "fontSize": 17,
  },
}
`;

exports[`ModeratorSettings matches the last snapshot 1`] = `
<FlatList
  ItemSeparatorComponent={[Function]}
  ListHeaderComponent={
    <View>
      <View>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
        >
          Community Time
        </Text>
      </View>
      <View>
        <View>
          <TouchableOpacity
            activeOpacity={0.2}
            onPress={[Function]}
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
            >
              + Add New
            </Text>
          </TouchableOpacity>
        </View>
      </View>
    </View>
  }
  data={
    Array [
      Object {
        "avatarUrl": "http://aurl.com",
        "id": 10,
        "name": "John Current",
      },
      Object {
        "avatarUrl": "http://aurl.com",
        "id": 11,
        "name": "John Other",
      },
    ]
  }
  disableVirtualization={false}
  horizontal={false}
  initialNumToRender={10}
  keyExtractor={[Function]}
  keyboardShouldPersistTaps="always"
  maxToRenderPerBatch={10}
  numColumns={1}
  onEndReachedThreshold={2}
  renderItem={[Function]}
  scrollEventThrottle={50}
  updateCellsBatchingPeriod={50}
  windowSize={21}
/>
`;

exports[`ModeratorSettings renders ModeratorRow 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  onPress={[Function]}
>
  <Avatar
    avatarUrl="http://aurl.com"
  />
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    John Current
  </Text>
  <TouchableOpacity
    activeOpacity={0.2}
    hitSlop={
      Object {
        "bottom": 15,
        "left": 10,
        "right": 10,
        "top": 15,
      }
    }
    onPress={[Function]}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      Remove
    </Text>
  </TouchableOpacity>
</TouchableOpacity>
`;
